# infra.new-backend

./: .gitignore  Makefile  README.md  pyproject.toml
app/: main.py  settings.py
app/api/routers/: __init__.py  integrations.py  products.py
app/cloudflare/: __init__.py  client.py
app/db/: dependencies.py  models.py
app/propel/: auth.py
infra/dev/: backend.tf
infra/modules/cloud_sql/: inputs.tf  main.tf  outputs.tf
infra/modules/gcp_project/: inputs.tf  main.tf  outputs.tf
infra/prod/: .terraform.lock.hcl  backend.tf  main.tf  plan.json  plan.tfplan
parser/: package-lock.json  package.json  parseHCLv2.ts
parser/api/: client.ts  remote.ts
parser/parsers/: hcl_parser.ts  hcl_parser_v2.ts
parser/resources/: registry.ts  resource.ts
parser/resources/gcp/: artifact_registry_repository.ts  bigquery_dataset.ts  bigquery_table.ts  cloud_run_v2_job.ts  cloud_run_v2_service.ts  cloudfunctions_function.ts  compute_address.ts  compute_disk.ts  compute_forwarding_rule.ts  compute_image.ts  compute_instance.ts  sql_database_instance.ts  storage_bucket.ts
parser/terraform/: schema.ts
parser/testing/: main.tf
parser/testing/gcp/artifact_registry/: main.tf
parser/testing/gcp/bigquery/: main.tf
parser/testing/gcp/bucket/: main.tf
parser/testing/gcp/cloud_function/: main.tf
parser/testing/gcp/cloud_run_job/: main.tf
parser/testing/gcp/cloud_run_service/: main.tf
parser/testing/gcp/cloud_sql/: main.tf
parser/testing/gcp/compute_address/: main.tf
scripts/: scrape.py
scripts/scrapers/: aws_bulk.py  gcp_catalog.py  gcp_machine_types.py
(+6 files in other folders)
